<resources>
    <string name="app_name">SO.Devs</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="accept_t_c"><![CDATA[I accept T&C]]></string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="search">Search for your location</string>
    <string name="location_spinner_prompt">Select your location</string>
    <string name="check_in_date">Check-in date:</string>
    <string name="check_out_date">Check-out date:</string>
    <string name="hotel">hotel</string>
    <string name="people_text">People:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="sign_out">Sign out</string>
    <string name="hotel_image">hotel_image</string>
    <string name="reserve">Reserve</string>
    <string name="go_home">Go home</string>
    <string name="please_rate_your_experience">Please rate your experience</string>
    <string name="preferred_room_text">Select your preferred room (price per night):</string>
</resources>
